FastAPI - Static Files

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,5 +1,6 @@
 <html lang="en">
     <body>
         <h2>Hello World! This text is from template - {{name}}</h2>
+        <img src='{{ url_for("static", path="logo-placeholder-image.png") }}' alt="" width="300">
     </body>
 </html>
